Fixed overflow hidden

--- a/assets/main.css
+++ b/assets/main.css
@@ -1697,6 +1697,7 @@ body.thredx .logo path {
   .case .wrapper-inner {
     padding: 1rem;
     grid-gap: 1rem;
+    overflow: hidden;
   }
 }
 .case .wrapper-inner--dark {
