--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -136,6 +136,7 @@ body.thredx .logo path
     @media $mobile
         padding: 1rem
         grid-gap: 1rem;
+        overflow: hidden
 
     &--dark
         background: #161616
